--- a/build.yaml
+++ b/build.yaml
@@ -19,7 +19,7 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: allikesay
+    shield: Allikesay
   - board: nice_nano_v2
     shield: settings_reset
 
